# AgentBoard

./: .gitignore  PRDv1.md  README.md  README.zh-CN.md  pyproject.toml
agentboard/: __init__.py  cli.py  config.py  logging.py
agentboard/auth/: middleware.py
agentboard/core/: conversations.py  sessions.py  tmux.py  transcript.py
agentboard/intelligence/: llm.py  summary.py
agentboard/web/: app.py
agentboard/web/static/: chat.js  manifest.json  style.css  sw.js
agentboard/web/templates/: base.html  conversation.html  dashboard.html  login.html  session_live.html
examples/: claude_compact.jsonl  codex_long_drift.jsonl  codex_short.jsonl
tests/: test_auth.py  test_conversations.py  test_sessions.py  test_summary.py  test_tmux.py  test_transcript.py  test_web.py
