[project]
name = "agentboard"
version = "0.3.0"
description = "Agent Session Workboard — a bearer-token web hub to drive your local & remote agent (Codex/Claude) tmux sessions from anywhere"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Leon", email = "leon@example.com" }]
keywords = ["agent", "session", "worktree", "codex", "claude", "tmux", "productivity"]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "pydantic>=2.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "httpx>=0.27",
]

[project.scripts]
agentboard = "agentboard.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["UP017"]  # datetime.UTC not available on Python 3.10

[tool.ruff.lint.per-file-ignores]
# Long system-prompt strings are kept readable as single lines.
"agentboard/intelligence/summary.py" = ["E501"]
# Embedded remote scanner script is kept compact on purpose.
"agentboard/core/conversations.py" = ["E501"]
# Tests touch a couple of private helpers deliberately.
"tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
